[project]
name = "llm-interpret-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.74.7",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]
